k8s/dxp_endpoint/endpoint.yaml
#@ load("@ytt:data", "data")
apiVersion: v1
kind: Endpoints
metadata:
  name: dxp-proxy
subsets:
  - addresses:
      - ip: #@ data.values.dockerHostAddress
    ports:
      - port: 8080
