k8s/dxp_endpoint/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dxp-proxy
  labels:
    app: dxp-proxy
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
