k8s/dxp_endpoint/ingressroute.yaml
#@ load("@ytt:data", "data")
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dxp-proxy
  labels:
    app: dxp-proxy
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: dxp.localdev.me
    services:
    - name: dxp-proxy
      port: 80
  - kind: Rule
    match: #@ data.values.virtualInstanceId
    services:
    - name: dxp-proxy
      port: 80
  tls:
    secretName: localdev-tls-secret
